# Virtual-Reality

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/Textures/: Lamborgini_mercy.mtl
assets/audio/: BoxCat Games - Epic Song.txt  collision.txt  klaxon.txt
assets/blender/: road.blend
assets/meshes/Caspita/source/Jiotto Caspita Roadster 1989  by Alex.Ka/tex/: info.txt
assets/meshes/N3RGP0PP4WH77QV59XVUI0A1W_obj/: N3RGP0PP4WH77QV59XVUI0A1W.mtl
assets/meshes/alpha/: AS5QG9E1JE65KQEOKSS4QB8ON.mtl
assets/meshes/car/: Free 3D model Stylized Cartoon Car Free Free - TurboSquid 1778654.url  car.mtl
assets/meshes/lambo/: Lamborghini Countach LP-5000 QV.mtl
assets/meshes/lamp/: lamp-reversed.blend  lamp-reversed.blend1  lamp-reversed.mtl  lamp.blend  lamp.mtl
assets/meshes/plane/: Read-Me.txt  p2002.mtl
assets/meshes/road/: road.mtl  road_segment.blend  vr_road_long.blend
assets/meshes/source/: light v7.fbx  street_light.mtl
assets/meshes/test_road/: test_road.mtl
assets/meshes/tree/: tree.mtl
assets/meshes/vr_road/: vr_road.mtl
code/: CMakeLists.txt
code/headers/: Camera.hpp  Car.hpp  CarRenderer.hpp  Container.hpp  Debug.hpp  DebugDrawer.hpp  Font.hpp  Game.hpp  Highscores.hpp  InstancedObject.hpp  LightSource.hpp  Mesh.hpp  Model.hpp  Object.hpp  Physics.hpp  Player.hpp  PlayerCamera.hpp  Road.hpp  Settings.hpp  Shader.hpp  Skybox.hpp  Sound.hpp  StreetLamp.hpp  Sun.hpp  Text.hpp  Texture.hpp  Vertices.hpp  Window.hpp  WorldCamera.hpp  camera.hpp  terrain.hpp
code/shaders/: basicModel.frag  basicModel.vert  bulletDebug.frag  bulletDebug.vert  car.frag  car.vert  font.frag  font.vert  instancedMatrixObject.vert  instancedObject.vert  lightShader.frag  road.frag  road.vert  skybox.frag  skybox.vert  textureLessShader.frag  textureLessShader.vert  tree.frag  vertexShader.vs
code/sources/: CMakeLists.txt  Camera.cpp  Car.cpp  CarRenderer.cpp  Container.cpp  Font.cpp  Game.cpp  InstancedObject.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Object.cpp  Physics.cpp  Player.cpp  PlayerCamera.cpp  Road.cpp  Shader.cpp  Skybox.cpp  Sound.cpp  StreetLamp.cpp  Sun.cpp  Text.cpp  Texture.cpp  Vertices.cpp  Window.cpp  WorldCamera.cpp  main.cpp
other/: highscores.txt
